--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
+        <h2>Welcome to Sway</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="example-text">Example Text</label>
+            <label for="example-text">Sway is your new way to comunicate with your current representatives about bills and issues that are importaint and upcoming based off your residentcy. Have an impact now by letting your reps know just how you feel about upcoming bills up for vote and Sway them to your side!</label>
             <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
           </div>
           <div class="form-group">
