--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -16,7 +16,7 @@
         </div>
         <div class="card p-3 rounded-0 border-top-0">
             <form>
-                <fieldset id="userInfo" disabled>
+                <fieldset id="userInfo">
                     <div class="form-row">
                         <div class="form-group col-12 col-sm-6">
                             <label for="firstName">First Name</label>
