--- a/views/datapage.handlebars
+++ b/views/datapage.handlebars
@@ -1,29 +1,34 @@
-<<<<<<< HEAD
-<div class="background-image-datapage">
-=======
 <div class="background-image">
->>>>>>> 589222296771dc7db1fe94e2bb3385f7be8a19dc
-    <div>
-        wow great.
-        <div id="user-info">
-
+    <div class="container">
+        <div class="jumbotron" id="cards">
+            <img src="/images/congress.jpg" height="150px" width="100%">
+            {{!-- <img src="https://www.rti.org/sites/default/files/styles/rti_banner_1250/public/page-hero-images/istock_000026946270_us_capitol_flag_2500.jpg?itok=J5Rt5egN" height="150px" width="100%"> --}}
         </div>
     </div>
+
 </div>
 
 <script>
     function getHouseBills() {
-        var houseBills = [];
         $.ajax({
             url: "api/house",
             method: "GET"
         }).then(function (response) {
-            for (var i = 0; i < response.length; i++) {
-                console.log(response[i]);
-                houseBills.push(response[i]);
-
-            }
-            return houseBills;
+            $.each(response, function (i, bill) {
+                console.log("ajax hitting");
+                var cardTemplate = `
+            <div class="card" id=card${i}>
+                <div class="card-body">
+                    <h4 class="card-title">Bill Number: ${bill.bill_number}</h4>
+                    <p class="card-text">Chamber: ${bill.chamber}</p>
+                    <p class="card-text">Description: ${bill.description}</p>
+                    <a href="${bill.bill_url}" class="btn btn-primary">View PDF</a>
+                </div>
+            </div>`
+                if (bill.chamber !== undefined) {
+                    $("#cards").append(cardTemplate);
+                }
+            })
         })
             .catch(function (err) {
                 if (err) throw err;
@@ -31,22 +36,32 @@
     }
 
     function getSenateBills() {
-        var senateBills = [];
         $.ajax({
             url: "api/senate",
             method: "GET"
         }).then(function (response) {
-            for (var i = 0; i < response.length; i++) {
-                senateBills.push(response[i]);
-                console.log(senateBills[i]);
-            }
-            console.log(`senatebills: ${senateBills}`);
-            return senateBills;
+            $.each(response, function (i, bill) {
+                console.log("ajax hitting");
+                var cardTemplate = `
+            <div class="card" id=card${i}>
+                <div class="card-body">
+                    <h4 class="card-title">Bill Number: ${bill.bill_number}</h4>
+                    <p class="card-text">Chamber: ${bill.chamber}</p>
+                    <p class="card-text">Description: ${bill.description}</p>
+                    <a href="${bill.bill_url}" class="btn btn-primary">View PDF</a>
+                </div>
+            </div>`
+                if (bill.chamber !== undefined) {
+                    $("#cards").append(cardTemplate);
+                }
+            })
         })
             .catch(function (err) {
                 if (err) throw err;
             })
     }
+
+
 
     getHouseBills();
     getSenateBills();
