--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,18 +1,17 @@
 
-  
+  <div class="background-error">
     <div class="container-404">
-      <div class="background-image">
         
       <div class="jumbotron mt-4">
-        <div class="background-image-404">
+        <div class="Error-text"></div>
+        
 
         <h1 class="display-4 text-center">404 Not Found
           <span role="img" aria-label="Face with rolling eyes">🙄</span>
         </h1>
         <a href="/">← Back To Home</a>
-        <div class="background-image">
-
+        </div>
         </div>
       </div>
     </div>
-  </div>
+  
