--- a/views/datapage.handlebars
+++ b/views/datapage.handlebars
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-<div class="background-image-datapage">
-=======
-<div class="background-image">
->>>>>>> 589222296771dc7db1fe94e2bb3385f7be8a19dc
+<div class="background-datapage">
     <div>
         wow great.
         <div id="user-info">
