--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="background-example">
+  <div class="container">
   <div class="row">
     <div class="col-8 offset-2">
       <div class="card mt-4">
@@ -16,4 +17,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
