--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -39,7 +39,9 @@
 
 }
 body, html {
-  height: 100%
+  height: 100%;
+  background-image: url("../images/flag.png");
+  background-size: 100%;
 }
 
 .Error-text {
@@ -52,9 +54,16 @@ body, html {
 	text-shadow: 0 2px white, 0 3px #777;
 }
 .background-datapage {
-  background-image: url("../images/War_George.jpg");
-  background-size: 100%;
+  background-image: url("../images/flag.jpg");
+  background-size: cover;
   height: 100%;
+  margin: 0 auto;
+}
+#cards {
+  /* background-image: url("../images/flag.jpg");
+  background-size: cover; */
+  height: 100%;
+  width: 100%;
 }
 .background-error {
   background-image: url("../images/Egale_with_glasses.jpg");
