--- a/views/datapage.handlebars
+++ b/views/datapage.handlebars
@@ -1,4 +1,4 @@
-<div class="background-image">
+{{!-- <div class="background-image"> --}}
     <div class="container">
         <div class="jumbotron" id="cards">
             <img src="/images/congress.png" width="100%">
