--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -45,8 +45,6 @@
                             <label for="state">State</label>
                             <select id="state" class="form-control">
                                 <option selected>Choose...</option>
-                                <option>Alabama</option>
-                                <option>California</option>
                             </select>
                         </div>
                         <div class="form-group col-12 col-sm-2">
@@ -71,3 +69,16 @@
         </div>
     </div>
 </div>
+<script>
+    var states = [
+        "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA",
+        "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
+        "MA", "MI", "MN" ,"MS", "MO", "MT", "NE", "NV", "NH", "NJ",
+        "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC",
+        "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY" 
+    ];
+    states.forEach(state=>{
+        var option = `<option>${state}</option>`;
+        $("#state").append(option);
+    });
+</script>
