--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
     {{!-- start navbar --}}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         {{!-- navbar title --}}
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">Sway</a>
         {{!-- responsive toggle --}}
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,31 +67,7 @@
 
     <script>
         $(document).ready(function () {
-            //parse cookies to get userId
-            function loggedIn() {
-                //declare append variable for scoping
-                var userId;
-                //get cookies
-                var cookieArray = document.cookie.split('; ');
-                //iterate through cookies
-                cookieArray.forEach(cookie => {
-                    //parse cookie into name and value
-                    var cookieName = cookie.split('=')[0];
-                    //find the userId cookie
-                    if (cookieName == 'user') {
-                        //append to userId variable
-                        userId = cookie.split('=')[1];
-                    }
-                });
-                //check userId validiity
-                if (userId > -1) {
-                    //if valid return userId
-                    return userId;
-                } else {
-                    //if no user cookie found infor user to login in
-                    console.log("cookies not found please log in again");
-                }
-            }
+           
             //define sign in link
             var signInLink = `<li class="nav-item">
                                 <a class="nav-link" href="/login">Sign In / Register</a>
@@ -109,15 +85,18 @@
                                 <a id="signOut" class="nav-link" href="#">Sign Out</a>
                             </li>`;
             //set valid userId
-            var userId = loggedIn();
+            console.log(document.cookie.split("=")[0]);
             //check to see if the user is signed in
-            if (userId > -1) {
+            if (document.cookie.split("=")[0] === 'token') {
                 //if user logged in append appropriate links to navbar
                 $("#navLinks").append(profileLink + aboutLink + logOutLink)
             } else {
                 //if user not logged append appropriate links to navbar
                 $("#navLinks").append(aboutLink + signInLink)
             }
+            
+
+
             //submit sign in form
             $("#submit-login").on("click", function (e) {
                 //prevent page refresh on form submit
