--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,33 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>Welcome to Sway</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Sway is your new way to comunicate with your current representatives about bills and issues that are importaint and upcoming based off your residentcy. Have an impact now by letting your reps know just how you feel about upcoming bills up for vote and Sway them to your side!</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+<div class="row">
+  <div class="col-12">
+    <div class="card rounded-0 border-0" >
+      <div class="card-body p-0 my-2">
+        <div id="carouselExampleControls" class="carousel slide carousel-fade bg-secondary" data-ride="carousel " style="height: 250px;">
+          <div class="carousel-inner">
+            <div class="carousel-item active text-center">
+              <h3>Find Your Representatives</h3>
+              <p>Sway is your new way to comunicate with your current representatives about bills and issues that are importaint and upcoming based off your residentcy. Have an impact now by letting your reps know just how you feel about upcoming bills up for vote and Sway them to your side!</p>
+            </div>
+            <div class="carousel-item text-center">
+              <h3>Contact Them</h3>
+            </div>
+            <div class="carousel-item">
+              
+                <button  class="btn btn-danger register">Register</button>
+             
+              
+            </div>
           </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-          
-        </ul>
-        
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
