--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,139 +1,143 @@
-<div class="row m-3 m-sm-5">
-    <div class="col-sm-12 col-md-9 mx-auto">
-        <div class="card rounded-0">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h4 class="text-center my-3">Profile</h4>
-                </div>
-            </div>
-        </div>
-        <div class="card rounded-0">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h4 class="text-center my-3">{{firstName}} {{lastName}}</h4>
-                </div>
-                <div class="col-sm-6">
-                    <p>Address:</p>
-                    <p>{{address1}} {{address2}}</p>
-                    <p>{{city}} {{state}} {{zip}}</p>
-                </div>
-            </div>
-        </div>
-        <div class="card rounded-0">
-            <div class="row">
-                <div class="col-12 col-sm-4 pr-sm-0">
-                    <div class="card rounded-0">
-                        {{senator1}}
+<div class="jumbotron">
+    <div class="row m-3 m-sm-5">
+        <div class="col-sm-12 col-md-9 mx-auto">
+            <div class="card rounded-0">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h4 class="text-center my-3">Profile</h4>
                     </div>
+                </div>
+            </div>
+            <div class="card rounded-0">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h4 class="text-center my-3">{{firstName}} {{lastName}}</h4>
+                    </div>
+                    <div class="col-sm-6">
+                        <p>Address:</p>
+                        <p>{{address1}} {{address2}}</p>
+                        <p>{{city}} {{state}} {{zip}}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card rounded-0">
+                <div class="row">
+                    <div class="col-12 col-sm-4 pr-sm-0">
+                        <div class="card rounded-0">
+                            {{senator1}}
+                        </div>
 
-                </div>
-                <div class="col-12 col-sm-4 p-sm-0">
-                    <div class="card rounded-0">
-                        {{senator2}}
                     </div>
-                </div>
-                <div class="col-12 col-sm-4 pl-sm-0">
-                    <div class="card rounded-0">
-                        {{usRepresentative}}
+                    <div class="col-12 col-sm-4 p-sm-0">
+                        <div class="card rounded-0">
+                            {{senator2}}
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-4 pl-sm-0">
+                        <div class="card rounded-0">
+                            {{usRepresentative}}
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
 
-<div class="row m-3 m-sm-5">
-    <div class="col-sm-12 col-md-9 mx-auto">
-        <div class="card p-3 rounded-0 border-0">
-            <div class="row">
-                <div class="col-12">
-                    <button id="editProfile" class="btn btn-block btn-primary" type="button" data-toggle="collapse"
-                        data-target="#editInfo" aria-expanded="false" aria-controls="editInfo">
-                        Edit Profile
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div id="editInfo" class="collapse">
-            <div class="card p-3 rounded-0 ">
+    <div class="row m-3 m-sm-5">
+        <div class="col-sm-12 col-md-9 mx-auto">
+            <div class="card p-3 rounded-0 border-0">
                 <div class="row">
                     <div class="col-12">
-                        <form>
-                            <fieldset id="userInfo" disabled>
-                                <div class="form-row">
-                                    <div class="form-group col-12 col-sm-6">
-                                        <label for="firstName">First Name</label>
-                                        <input type="text" class="form-control" id="firstName" value="{{firstName}}">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-6">
-                                        <label for="lastName">Last Name</label>
-                                        <input type="text" class="form-control" id="last_name" value="{{lastName}}">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-12">
-                                        <label for="email">Email</label>
-                                        <input type="email" class="form-control" id="email" value="{{email}}">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-6">
-                                        <label for="password1">Password</label>
-                                        <input type="password" class="form-control" id="password1" value="Password">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-6">
-                                        <label for="password1">Re-Enter Password</label>
-                                        <input type="password" class="form-control" id="password2" value="Password">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-12">
-                                        <label for="address">Address</label>
-                                        <input type="text" class="form-control" id="address" value="{{address1}}">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-12">
-                                        <label for="address2">Address 2</label>
-                                        <input type="text" class="form-control" id="{{address2}}" value="{{address2}}">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-6">
-                                        <label for="city">City</label>
-                                        <input type="text" class="form-control" id="city" value="{{city}}">
-                                    </div>
-                                    <div class="form-group col-12 col-sm-4">
-                                        <label for="state">State</label>
-                                        <select id="state" class="form-control" value="{{state}}">
-                                            <option selected>Choose...</option>
-                                            <option>Alabama</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group col-12 col-sm-2">
-                                        <label for="zip">Zip</label>
-                                        <input type="text" class="form-control" id="zip" value="{{zip}}">
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <button id="saveChanges" type="submit" style="display: none;"
-                                        class="btn btn-primary btn-block my-3 mx-auto">Save Changes</button>
-                                </div>
-                            </fieldset>
-                        </form>
+                        <button id="editProfile" class="btn btn-block btn-primary" type="button" data-toggle="collapse"
+                            data-target="#editInfo" aria-expanded="false" aria-controls="editInfo">
+                            Edit Profile
+                        </button>
                     </div>
                 </div>
             </div>
+            <div id="editInfo" class="collapse">
+                <div class="card p-3 rounded-0 ">
+                    <div class="row">
+                        <div class="col-12">
+                            <form>
+                                <fieldset id="userInfo" disabled>
+                                    <div class="form-row">
+                                        <div class="form-group col-12 col-sm-6">
+                                            <label for="firstName">First Name</label>
+                                            <input type="text" class="form-control" id="firstName"
+                                                value="{{firstName}}">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-6">
+                                            <label for="lastName">Last Name</label>
+                                            <input type="text" class="form-control" id="last_name" value="{{lastName}}">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-12">
+                                            <label for="email">Email</label>
+                                            <input type="email" class="form-control" id="email" value="{{email}}">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-6">
+                                            <label for="password1">Password</label>
+                                            <input type="password" class="form-control" id="password1" value="Password">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-6">
+                                            <label for="password1">Re-Enter Password</label>
+                                            <input type="password" class="form-control" id="password2" value="Password">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-12">
+                                            <label for="address">Address</label>
+                                            <input type="text" class="form-control" id="address" value="{{address1}}">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-12">
+                                            <label for="address2">Address 2</label>
+                                            <input type="text" class="form-control" id="{{address2}}"
+                                                value="{{address2}}">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-6">
+                                            <label for="city">City</label>
+                                            <input type="text" class="form-control" id="city" value="{{city}}">
+                                        </div>
+                                        <div class="form-group col-12 col-sm-4">
+                                            <label for="state">State</label>
+                                            <select id="state" class="form-control" value="{{state}}">
+                                                <option selected>Choose...</option>
+                                                <option>Alabama</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group col-12 col-sm-2">
+                                            <label for="zip">Zip</label>
+                                            <input type="text" class="form-control" id="zip" value="{{zip}}">
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <button id="saveChanges" type="submit" style="display: none;"
+                                            class="btn btn-primary btn-block my-3 mx-auto">Save Changes</button>
+                                    </div>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
         </div>
-
-
-
     </div>
 </div>
 
 
 <script>
 
-     var states = [
+    var states = [
         "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA",
         "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
-        "MA", "MI", "MN" ,"MS", "MO", "MT", "NE", "NV", "NH", "NJ",
+        "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ",
         "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC",
-        "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY" 
+        "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY"
     ];
-    states.forEach(state=>{
+    states.forEach(state => {
         var option = `<option>${state}</option>`;
         $("#state").append(option);
     });
