--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -66,8 +66,11 @@ body, html {
   height: 100%;
   width: 100%;
 }
-=======
 
+#indexJumbo {
+  width: 80%;
+  
+}
 
 .background-error {
   background-image: url("../images/Bald-egale.jpg");
