--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,7 +40,7 @@
     {{#each house}}
     <div class="col-12 col-sm-4 col-md-2 mb-2">
       <div class="card rounded-0 p-2 billNum pl-0 pr-0" style="height:100%">
-        <div class="card-title mb-4 pt-4 pb-2">
+        <div class="card-title cardtitle mb-4 pt-4 pb-2">
           <strong>
             <p>{{billNum}}</p>
           </strong>
