--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div class="card offset-md-1" id="indexJumbo">
+<div class="card mx-auto" id="indexJumbo">
   <div class="row">
     <div class="col-md-12">
       <div class="card rounded-0 border-0">
@@ -38,7 +38,7 @@
   <div class="row" align="center">
 
     {{#each house}}
-    <div class="col-12 col-sm-4 col-md-2 mb-2">
+    <div class="col-12 col-sm-4 col-md-3 mb-2">
       <div class="card rounded-0 p-2" style="height:100%">
         <strong class="mt-4 mb-0">
           <p>{{billNum}}</p>
@@ -50,6 +50,11 @@
     </div>
     {{/each}}
   </div>
+  <fiv class="row">
+    <div class="col-12 text-center">
+      <a href="/datapage"><p>View More Bills</p></a>
+    </div>
+  </fiv>
 </div>
 
 
