--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="card">
     <div class="row m-3 m-sm-5">
         <div class="col-sm-12 col-md-9 mx-auto">
             <div class="card rounded-0">
